--- a/GAMEBTL.cbp
+++ b/GAMEBTL.cbp
@@ -35,6 +35,7 @@
 		<Unit filename="Loadimage.cpp" />
 		<Unit filename="Loadimage.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="map.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
