--- a/GAMEBTL.cbp
+++ b/GAMEBTL.cbp
@@ -44,6 +44,8 @@
 		</Unit>
 		<Unit filename="media.cpp" />
 		<Unit filename="media.h" />
+		<Unit filename="question.cpp" />
+		<Unit filename="question.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
